$Id: CHANGELOG,v 1.15 2004/03/04 05:41:12 urkle Exp $
1.96: ?
* fixed LogSQLPreserveFile config parameter
* reworked safe_create_tables and core SQL insert routine.
* renamed log_sql_* variables and typedefs to logsql_*
* separated all mysql specific code to separate code module (DB abstraction)
* separated TODO from Changelog
* fixed default value of socket file. it's really /var/lib/mysql/mysql.sock not
  /tmp/mysql.sock
* Documentation completely converted to Docbook
* Documentation updated. (still needs more work done)
* LogSQLDelayedInserts config option removed
* Added DB generic LogSQLDBParam. Usage is LogSQLDBParam param value
  example: LogSQLDBParam tcpport 12345

1.95: 2004-02-05
* audit and update of extract_* functions to acheive same output as 
  mod_log_config.

1.94: 2004-02-03
* ssl loggin back in as separate module under 1.3 and 2.0
* preparsing of format tags is now done to speed up main logging loop.
* fixed a nasty bug with pointer arithmetic (ick) that caused a segfault with
  LogSQLWhichCookies

1.93: 2004-01-20
* Compiles for apache 1.3 AND 2.0
* split apache version specific functions to seperate header files
* split apache version specific includes to seperate header files
* added wrapper defines for apache 1.3
* updated configure m4 scripts to detect both apache versions at the same time 
  and assign defines as to which version was found.
* made install default to not activate module in configuration files.
  use make activate instead
* split SSL logging to separate module (still needs to be finished)

1.92: 2004-01-05
* fixed compilation issue with mysql 4.x where mysql_error returns const char *
* Have SSL support compiling (though not really tested)
* updated configure macros to detect mod_ssl.h
* configure now uses --with-apxs instead of --with-apache
* Added documentation from 1.19b (needs to be update)
* Fixed an issue with dependencies in Makefile.in

1.91: 2003-12-23
* Added checks for MySQL to autoconf